k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openprivy
  labels:
    name: openprivy
